--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="images/logo_place_header.svg" alt="header logo" class="logo header__logo">
-      <p class="header__title">Научиться учиться</p>
+      <img src="images/logo_place_header.svg" alt="header-logo" class="logo header__logo">
+      <h1 class="header__title">Научиться учиться</h1>
       <div class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a class="header__link" href="#">Узнать →</a></div>
 
-      <img src="images/header-image.png" alt="header main illustration" class="header__main-illustration">
+      <img src="images/header-image.png" alt="header-main-illustration" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
 
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <p class="two-columns__brief">Главные проблемы в обучении</p>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns_main-text">
             <p class="two-columns__paragraph p1">Ни в школе, ни в институте на не учат тому, как правильно изучать
               материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше
@@ -41,7 +41,7 @@
 
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
-        <p class="section-subtitle">Про учёбу и мозг</p>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
         <div class="table">
           <div class="table__cell c1">
             <h3 class="table__heading">86 миллиардов</h3>
@@ -89,7 +89,7 @@
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
 
         <div class="table table_theme_dark">
 
@@ -169,7 +169,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="logo footer" class="logo logo_place_footer">
+          <img src="./images/logo_place_footer.svg" alt="logo-footer" class="logo logo_place_footer">
           <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
         <div class="footer__column_content_info">
