--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="images/logo_place_header.svg" alt="header-logo" class="logo header__logo">
+      <img src="images/logo_place_header.svg" alt="логотип" class="logo header__logo">
       <h1 class="header__title">Научиться учиться</h1>
       <div class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a class="header__link" href="#">Узнать →</a></div>
 
-      <img src="images/header-image.png" alt="header-main-illustration" class="header__main-illustration">
+      <img src="images/header-image.png" alt="фото-главный-экран" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
 
@@ -162,14 +162,14 @@
 
           </div>
         </div>
-        <img src="images/kaufman-triangle.svg" alt="triangle" class="kaufman__triangle">
+        <img src="images/kaufman-triangle.svg" alt="треугольниик" class="kaufman__triangle">
       </section>
     </main>
 
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="logo-footer" class="logo logo_place_footer">
+          <img src="./images/logo_place_footer.svg" alt="логотип" class="logo logo_place_footer">
           <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
         <div class="footer__column_content_info">
@@ -184,9 +184,9 @@
         <div class="footer__column_content_social">
           <p class="footer__column-heading">Соцсети</p>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#"><img src="images/facebook_color_white.svg" alt="facebook-logo" class="footer__social-icon">Facebook</a></li>
-            <li><a class="footer__column-link" href="#"><img src="images/vk_color_white.svg" alt="vkontakte-logo" class="footer__social-icon">ВКонтакте</a></li>
-            <li><a class="footer__column-link" href="#"><img src="images/instagram_color_white.svg" alt="instagram-logo" class="footer__social-icon">Instagram</a></li>
+            <li><a class="footer__column-link" href="#"><img src="images/facebook_color_white.svg" alt="логотип-фейсбука" class="footer__social-icon">Facebook</a></li>
+            <li><a class="footer__column-link" href="#"><img src="images/vk_color_white.svg" alt="логотип-вконтакте" class="footer__social-icon">ВКонтакте</a></li>
+            <li><a class="footer__column-link" href="#"><img src="images/instagram_color_white.svg" alt="логотип-инстаграм" class="footer__social-icon">Instagram</a></li>
 
           </ul>
         </div>
