после 2-го ревью 17 апр 2022

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo__place_header">
+      <div class="logo logo_place_header">
        <!-- <img src="images/logo_place_header.svg" alt="логотип" class="logo header__logo"> -->
       </div>
       
