--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <!-- <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css"> -->
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 
 <body>
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header">
-       <!-- <img src="images/logo_place_header.svg" alt="логотип" class="logo header__logo"> -->
+        <!-- <img src="images/logo_place_header.svg" alt="логотип" class="logo header__logo"> -->
       </div>
-      
+
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a class="header__link" href="#">Узнать →</a></p>
 
       <img src="images/header-image.png" alt="фото-главный-экран" class="header__main-illustration">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -41,6 +42,78 @@
           </div>
         </div>
       </section>
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img src="images/cards-attention.png" alt="два-вида-внимания" class="cards__image">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img src="images/cards-recall.png" alt="вспоминайте-изученное" class="cards__image">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img src="images/cards-interliving.png" alt="интерливинг" class="cards__image">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img src="images/cards-question.png" alt="вопросы" class="cards__image">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img src="images/cards-competence.png" alt="иллюзия-компетентности" class="cards__image">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
+              гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да
+              так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И
+              тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
+              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее →</a>
+      </section>
+
+
+
+
 
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -84,10 +157,21 @@
         </ul>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее →</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="images/khan-book.jpg" alt="книга-весь-мир-школа" class="khan__book-pic">
+            <a class="khan__buy-link" href="#">Купить книгу →</a>
+          </div>
+
+        </div>
       </section>
 
       <section class="kaufman">
@@ -95,78 +179,60 @@
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
 
         <ul class="table table_theme_dark">
-
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
-
-
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-
           </li>
-
-
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-
           </li>
-
-
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-
           </li>
-
-
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-
           </li>
-
-
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
-
           </li>
-
-
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-
           </li>
-
-
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-
           </li>
-
-
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
             </p>
-
           </li>
-
-
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
         <!-- <img src="images/kaufman-triangle.svg" alt="треугольниик" class="kaufman__triangle"> -->
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a href="#"><img src="images/logo/resources-arzamas.svg" alt="арзамас" class="resources__link"></a>
+          <a href="#"><img src="images/logo/resources-n1.svg" alt="н-плюс-1" class="resources__link"></a>
+          <a href="#"><img src="images/logo/resources-strelka.svg" alt="стрелка" class="resources__link"></a>
+          <a href="#"><img src="images/logo/resources-polka.svg" alt="полка" class="resources__link"></a>
+        </div>
       </section>
     </main>
 
@@ -188,9 +254,12 @@
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#"><img src="images/facebook_color_white.svg" alt="логотип-фейсбука" class="footer__social-icon">Facebook</a></li>
-            <li><a class="footer__column-link" href="#"><img src="images/vk_color_white.svg" alt="логотип-вконтакте" class="footer__social-icon">ВКонтакте</a></li>
-            <li><a class="footer__column-link" href="#"><img src="images/instagram_color_white.svg" alt="логотип-инстаграм" class="footer__social-icon">Instagram</a></li>
+            <li><a class="footer__column-link" href="#"><img src="images/facebook_color_white.svg"
+                  alt="логотип-фейсбука" class="footer__social-icon">Facebook</a></li>
+            <li><a class="footer__column-link" href="#"><img src="images/vk_color_white.svg" alt="логотип-вконтакте"
+                  class="footer__social-icon">ВКонтакте</a></li>
+            <li><a class="footer__column-link" href="#"><img src="images/instagram_color_white.svg"
+                  alt="логотип-инстаграм" class="footer__social-icon">Instagram</a></li>
 
           </ul>
         </div>
