--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-        жизни? <a class="header__link" href="#">Узнать →</a></p>
+        жизни? <a class="header__link" href="#" target="_blank">Узнать →</a></p>
 
       <img src="images/header-image.png" alt="фото-главный-экран" class="header__main-illustration">
       <div class="header__square-pic rotation"></div>
@@ -27,7 +27,7 @@
 
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте на не учат тому, как правильно изучать
@@ -40,7 +40,7 @@
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
 
           </div>
-        </div>
+        </article>
       </section>
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
@@ -80,11 +80,11 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"
             title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
             title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
@@ -92,7 +92,7 @@
       </section>
 
       <section class="oakley">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
@@ -102,13 +102,13 @@
               добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
             </p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее →</a>
+        <a href="#" class="feynman__link" target="_blank">Подробнее →</a>
       </section>
 
 
@@ -161,14 +161,14 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
             миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
-            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="images/khan-book.jpg" alt="книга-весь-мир-школа" class="khan__book-pic">
-            <a class="khan__buy-link" href="#">Купить книгу →</a>
+            <a class="khan__buy-link" href="#" target="_blank">Купить книгу →</a>
           </div>
 
         </div>
@@ -227,12 +227,12 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <a href="#"><img src="images/logo/resources-arzamas.svg" alt="арзамас" class="resources__link"></a>
-          <a href="#"><img src="images/logo/resources-n1.svg" alt="н-плюс-1" class="resources__link"></a>
-          <a href="#"><img src="images/logo/resources-strelka.svg" alt="стрелка" class="resources__link"></a>
-          <a href="#"><img src="images/logo/resources-polka.svg" alt="полка" class="resources__link"></a>
-        </div>
+        <ul class="resources__logo-zone">
+          <li><a href="#" target="_blank"><img src="images/logo/resources-arzamas.svg" alt="арзамас" class="resources__link"></a></li>
+          <li><a href="#" target="_blank"><img src="images/logo/resources-n1.svg" alt="н-плюс-1" class="resources__link"></a></li>
+          <li><a href="#" target="_blank"><img src="images/logo/resources-strelka.svg" alt="стрелка" class="resources__link"></a></li>
+          <li><a href="#" target="_blank"><img src="images/logo/resources-polka.svg" alt="полка" class="resources__link"></a></li>
+        </ul>
       </section>
     </main>
 
@@ -245,20 +245,20 @@
         <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#">Главная</a></li>
-            <li><a class="footer__column-link" href="#">Концепция</a></li>
-            <li><a class="footer__column-link" href="#">Наставники</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank">Главная</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank">Концепция</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank">Наставники</a></li>
           </ul>
         </nav>
 
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#"><img src="images/facebook_color_white.svg"
+            <li><a class="footer__column-link" href="#" target="_blank"><img src="images/facebook_color_white.svg"
                   alt="логотип-фейсбука" class="footer__social-icon">Facebook</a></li>
-            <li><a class="footer__column-link" href="#"><img src="images/vk_color_white.svg" alt="логотип-вконтакте"
+            <li><a class="footer__column-link" href="#" target="_blank"><img src="images/vk_color_white.svg" alt="логотип-вконтакте"
                   class="footer__social-icon">ВКонтакте</a></li>
-            <li><a class="footer__column-link" href="#"><img src="images/instagram_color_white.svg"
+            <li><a class="footer__column-link" href="#" target="_blank"><img src="images/instagram_color_white.svg"
                   alt="логотип-инстаграм" class="footer__social-icon">Instagram</a></li>
 
           </ul>
